<resources>
    <string name="app_name">A7S212021prac2</string>
    <string name="Splash">Bienvenido a la aplicacion</string>
    <string name="Opciones">Opciones</string>
    <string name="btnsumar">Sumar</string>
    <string name="txt1">Valor 1</string>
    <string name="txt2">Valor 2</string>
    <string name="Procesar">Procesar</string>
    <string name="btnresta">Restar</string>
    <string name="btnmult">Multiplicar</string>
    <string name="btnDiv">Dividir</string>
    <string name="btnCua">Cuadrado</string>
    <string name="btnPO">Potencia</string>
    <string name="txtEx">Exponente</string>
</resources>